--- a/dev/KultOracle/src/ui/descriptionwindow.ui
+++ b/dev/KultOracle/src/ui/descriptionwindow.ui
@@ -563,10 +563,10 @@
           </property>
           <property name="font">
            <font>
-            <family>Liberation Serif</family>
-            <pointsize>14</pointsize>
+            <family>Great Vibes</family>
+            <pointsize>18</pointsize>
             <weight>50</weight>
-            <italic>true</italic>
+            <italic>false</italic>
             <bold>false</bold>
            </font>
           </property>
@@ -580,9 +580,10 @@
            <bool>false</bool>
           </property>
           <property name="styleSheet">
-           <string notr="true">font: italic 14pt &quot;Liberation Serif&quot;;
+           <string notr="true">font: 18pt &quot;Great Vibes&quot;;
 background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);</string>
+color: rgb(255, 255, 255);
+</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::WinPanel</enum>
